--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     git config user.email
 
     para configurar el usuario
-    git config --global user.name alejandro zapata
-    git.config --global user.email lucilabelenp
+    git config --global user.name lalala
+    git.config --global user.email testtest 
 
 >>    working directory 
 >>    staging aree
