algunas notas sobre git commands

--- a/index.html
+++ b/index.html
@@ -3,40 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <title>JS Bucles</title>
 </head>
 <body>
-    para ver con que usuario estoy logueado
-    git config user.name
-    git config user.email
 
-    para configurar el usuario
-    git config --global user.name lalala
-    git.config --global user.email testtest 
+    <h1>JS Bucles</h1>
 
->>    working directory 
->>    staging aree
->>    local repository
-
-git init > inicializa mi carpeta
-git status > para ver status
-git add filename.ext >>  para poner algo en staging area
-
-    git commit -m archivo.ext >>>> para subir el archivo a mi repositorio local
-    git commit -m "comentario"
-
-    git log  >> me muestra los cambios
-    git log --oneline >> version resumida
-
-    aca digo cual es la direccion remota 
-    git remote add origin https://github.com/krishini/pruebaremote.git
-
-    git remote -v
-    para asegurarme de que estoy apuntando al repositorio remoto correspondiente
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, accusantium harum aut esse libero eos, sequi provident incidunt iste ipsum impedit! Unde eius dignissimos explicabo, facilis ad ducimus voluptate ullam!</p>
+  
+  <h2>GIT</h2>
+  <h3>Como activar git en un proyecto</h3>
+  <p>Voy a la consola, me pongo dentro de la carpeta que quiero agregar a git</p>
+  <p>git init > inicializa un repositorio git</p>
+  <p>git add > listar archivos que quiero pasar a staging</p>
 
     
-    git push origin master >> para subir del local al remoto
 
-antes de subir al remoto, tengo que habr subido al local 
+
+
+
+
+
+
+
+
+<script src="./js/while.js"></script>
 </body>
 </html>
