actualizacion de texto del index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <h3>Como activar git en un proyecto</h3>
   <p>Voy a la consola, me pongo dentro de la carpeta que quiero agregar a git</p>
   <p>git init > inicializa un repositorio git</p>
+  <p>en VS code cuando voy haciendo cambios me los muestra en la zona "changes"</p>
   <p>git add > listar archivos que quiero pasar a staging</p>
+  <p>git commit -m "Mensaje concreto con mi commit concreto"</p>
+
 
     
 
