--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, accusantium harum aut esse libero eos, sequi provident incidunt iste ipsum impedit! Unde eius dignissimos explicabo, facilis ad ducimus voluptate ullam!</p>
   
   <h2>GIT</h2>
+
+  <h3>setup de usuario</h3>
+<h4>para ver con que usuario estoy logueado</h4>
+<p>git config user.name</p> 
+<p>este alias esta en settings cuando pongo que mi mail sea privado </p>
+<p>git config user.email</p>
+
+<h4>para configurar el usuario</h4>
+<p>git config --global user.name lalala</p>
+<p>git.config --global user.email testtest </p>
+<p>git config user.name "mi_usuario"</p>
+<p>git config --local user.name "nombreLocal"</p>
+<p>git confog --local user.email "123456778+nombredeusuario@users.noreply.github.com"</p>
+
   <h3>Como activar git en un proyecto</h3>
   <p>Voy a la consola, me pongo dentro de la carpeta que quiero agregar a git</p>
-  <p>git init > inicializa un repositorio git</p>
+  <p>git init > inicializa un repositorio git en mi carpeta</p>
   <p>en VS code cuando voy haciendo cambios me los muestra en la zona "changes"</p>
+  <p>git status  > para ver status</p>
   <p>git add > listar archivos que quiero pasar a staging</p>
   <p>git commit -m "Mensaje concreto con mi commit concreto"</p>
+  <p>git push para pushear los cambios al repo</p>
+
+<h3>como crear un nuevo repositorio</h3>
 
 
     
