agregue un resumen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
   <p>git commit -m "Mensaje concreto con mi commit concreto"</p>
   <p>git push para pushear los cambios al repo</p>
 
+  <h3>resumen</h3>
+  <ul>
+    <li>git add: me agrega mis cambios a mi staging area</li>
+    <li>git commit -m "mensaje": confirma mis cambios</li>
+    <li>git push: pushea mis cambios</li>
+    <p>y siempre git status para ver que onda</p>
+  </ul>
 <h3>como crear un nuevo repositorio</h3>
 
 
