--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/styles.css">
-    <title>JS Bucles</title>
+    <title>git notes</title>
 </head>
 <body>
 
-    <h1>JS Bucles</h1>
+    <h1>Git notes</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, accusantium harum aut esse libero eos, sequi provident incidunt iste ipsum impedit! Unde eius dignissimos explicabo, facilis ad ducimus voluptate ullam!</p>
   
   <h2>GIT</h2>
-
+<p>la posta esta aca https://git-scm.com/docs</p>
   <h3>setup de usuario</h3>
 <h4>para ver con que usuario estoy logueado</h4>
 <p>git config user.name</p> 
