agregue unas infos

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   
   <h2>GIT</h2>
 <p>la posta esta aca https://git-scm.com/docs</p>
+
   <h3>setup de usuario</h3>
 <h4>para ver con que usuario estoy logueado</h4>
 <p>git config user.name</p> 
@@ -38,11 +39,17 @@
 
   <h3>git checkout</h3>
   <p>con git checkout hash number podes detachear osea deshacer el cambio del commit que hayas elegido.</p>
-<h3>como crear un nuevo repositorio</h3>
+<h3>como crear un nuevo repositorio, o agregar el repositorio al cual voy a estar pusheando</h3>
 
-
+<p>git remote add origin https://github.com/krishini/GIT-notes (la direccion de mi repositorio)</p>
+<p>para ver q repositorios tengo:</p>
+<p>git remote -v</p>
+<p>con fetch me fijo si hubieron cambios en mi repo</p>
+<p>git branch -M main: para RENOMBRAR MI RAMA</p>
+<p>git branch: para ver que ramas tengo</p>
+<p>git push -u origin main: el -u es upstream. sabe que va a escribir en origin (el repo remoto) y en la rama q defini (main)</p>
     
-
+<p>git pull origin main: traerme los cambios</p>
 
 
 
